--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
-install: ['bundle install']
-script:   'rake spec'
-notifications: { email: false }
+install: 
+  - 'bundle install'
+  - 'gem install librarian-puppet'
+  - 'librarian-puppet install'
+  - 'cp modules/* spec/fixtures/modules/ -R'
+
+script: 'rake spec'
+
+notifications:
+  email: false
